@@ -1,6 +1,4 @@
-DIST xgamer-0.2.1.tar.gz 41036 SHA256 f2fac9c9a276321cc0e6b9d4fcb6ded4213d458616a31035392b2a9dce0fffc2
 DIST xgamer-0.3.0.tar.gz 46410 SHA256 886ac330d3a78985747675725eabe660450faf9fd50c933ffea9056a41a65ebe
-EBUILD xgamer-0.2.1.ebuild 767 SHA256 30ad4cc291d9f90857e8574e0e6ec38ed6be36ffd1c39ede4684de4a62a467ff SHA512 67f5af10f055d03beb91aa6eb816f4c7ca534834db524bf146ccd50d60d97f6ec84e8b695af031420cfdabcf33b08572876439fc332b09cb9f0d50f07ba08fbc WHIRLPOOL df84eaa2408c600d132deef0fd2f2fde464f7e33a0dcf2995624133c157cd0e3e484a6bb8e89f27419d9e9bea62db569d6540407bfb3b7fd7fba9d643f2ac0c7
 EBUILD xgamer-0.3.0.ebuild 765 SHA256 80f74f6d36ea3056244dd88c0e72e0e3489435ed2f1631825f13f600e6c00391 SHA512 becd56eb5c3ec175f09c2c69003cce28c48476370b1bfc021ff1a2204e19722c5a2aad52b2166e375fa46bb59be8ce67c20c485f048b9deb07d18dea4e6bfa0f WHIRLPOOL 886b902e5f2f18771fc84872947229618096e0ffd779bbb9e507c43f72bf8d5e3ecab432cc972b3f61395d6f47945833a38b3886aa4a59559cb1ea84c32d3221
-MISC ChangeLog 1334 SHA256 beffd9893d287fc2401e5d5bd8df51ef20dea0ee9ebc6e173eed7f6b4b174e7d SHA512 15b5b7e8bc03a876f0de155290b25b2cd7371fbe6fb1388569c6c5f4f1848af2bff586df13b955c23fab20ffb65a398f9add0bb11c930e6e8e5e8c591b382f57 WHIRLPOOL 22a0af252b6aa64668af70854f1cc4650695800589c3e7fdaa4a75b89ca919c69e86607b2f5c36a79fd0f0938cd668b8596cbd8398c86d1893bbb7fb5cd233a2
+MISC ChangeLog 1419 SHA256 454dc15e489366e79efe945ed0b18b624210db902db388c70f3045a40f20155b SHA512 e4e861c5ab904d2cac24c840e15aa55e36c150c14bb4609acbe30e3746e30805f8bf84ff46110fdc650f023082673d8122173f2ce2e8e8fcb58246c8317e921f WHIRLPOOL 05d558304ce29557460056edfefc08407c4254dfc7f768a6a060d83634aed8f0becaa2f46d3d37a50dcc5871f16aaec0153dfa01c47aaf4f76add52266c23486
 MISC metadata.xml 235 SHA256 be055b98c2a3b85aa8ebf307ac8f8ece50ed7a644c9cde85b785518b00851614 SHA512 9ebda22c0fc97a352baa249ee27be232f8db76f5c4262b7e32190cc02eb2fc439387946ba83f93ed82719e67496fe0501c9b95d2cecddfcc4fa6a081e89cadff WHIRLPOOL 05c0efb0f363a43b271a3d43201753acce9254504d1a547465ac2d43424606fc984beaac0e9316b4c518aca6044747bc4cee7fd113394df8f47819b892931ce0
