@@ -1,6 +1,9 @@
 # ChangeLog for games-util/xgamer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-util/xgamer/ChangeLog,v 1.9 2012/08/20 15:52:19 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-util/xgamer/ChangeLog,v 1.10 2012/11/29 02:09:34 mr_bones_ Exp $
+
+  29 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org> -xgamer-0.2.1.ebuild:
+  old
 
   20 Aug 2012; Michael Sterrett <mr_bones_@gentoo.org> xgamer-0.3.0.ebuild:
   stable for x86
